# mc-scan

./: Cargo.toml
src/: app.rs  i18n.rs  main.rs  styles.rs
src/components/: action_button.rs  address_list.rs  left_panel.rs  mod.rs  modals.rs  results_list.rs  right_panel.rs  scan_progress.rs  settings.rs
src/components/address_list/: add_dialog.rs  mod.rs
src/components/results_list/: avatar.rs  item.rs  mod.rs  preview_dialog.rs
src/components/ui/: badge.rs  button.rs  dialog.rs  input.rs  mod.rs  scrollbar.rs  textarea.rs
src/parser/: parser.rs
src/scanner/: bedrock.rs  java.rs  mod.rs  parse.rs  types.rs
