[package]
name = "mc-scan"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["image", "svg"] }
iced_aw = { version = "0.12.2" }
mcproto-rs = "0.2.0"
tokio = { version = "1", features = ["full"] }
byteorder = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ipnet = "2.11.0"
once_cell = "1.21.3"