[package]
name = "mc-scan"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["image", "svg"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
byteorder = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ipnet = { version = "2.12.0", features = [] }
once_cell = "1.21.4"
