[package]
name = "mc-scan"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = [
    "tiny-skia",
    "crisp",
    "web-colors",
    "thread-pool",
    "image",
    "svg",
    "linux-theme-detection",
    "x11",
    "wayland",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0.140"
ipnet = { version = "2.12.0", features = [] }
once_cell = "1.21.4"
sys-locale = "0.3"
